<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">SoDapp</string>
    <string name="title_activity_maps">SoDapp Trip Active</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="nearby_devices">Nearby Devices</string>

    <string name="title_connected_to">connected to
        <xliff:g id="device_name">%1$s</xliff:g>
    </string>

    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="starting_greeting">"Hello!</string>
    <string name="starting_prompt">Please enter a username</string>
    <string name="starting_username">username</string>
    <string name="starting_getting_data">Getting data from the server....</string>
    <string name="button_next">Next</string>
    <string name="welcome_return_user_greeting">Welcome back,</string>
    <string name="welcome_new_user_greeting">Welcome,</string>
    <string name="welcome_new_user_prompt">Please give a few details about yourself</string>
    <string name="welcome_new_user_occupation">Occupation</string>
    <string name="welcome_new_user_occupation_hint">eg. Student</string>
    <string name="welcome_new_user_age">Age</string>
    <string name="welcome_new_user_gender">Gender</string>
    <string name="welcome_new_user_gender_hint">M/F/Other</string>
    <string name="welcome_new_user_condition">Pre-exisiting condtion(s) (if any)</string>
    <string name="welcome_new_user_condition_hint">NA if not applicable</string>
    <string name="welcome_new_user_privacy">Don\'t worry, we won\'t share any identifiable information :)</string>
    <string name="main_going_somewhere">Going Somewhere?</string>
    <string name="main_start_trip">Start Trip</string>
    <string name="maps_trip_active">Trip Active</string>
    <string name="maps_end_trip">End Trip</string>
    <string name="end_trip_greeting">Trip Ended!</string>
    <string name="end_trip_details">Trip details</string>
    <string name="end_trip_duration">Trip duration</string>
    <string name="end_trip_number">Number of people in proximity</string>
    <string name="end_trip_score">Social Distancing Score</string>
    <string name="end_trip_score_hint">Lesser score is better!</string>
    <string name="end_trip_places_visited">Places Visited</string>
    <string name="stats_getting_data">Getting Data from the server....</string>
    <string name="stats_your_cum_score">Your Cumulative Score</string>
    <string name="stats_top">You are in the top</string>
    <string name="stats_age_group">of your age group</string>
    <string name="stats_gender_group">of your gender group</string>
    <string name="stats_occupation_group">of your occupation group</string>
    <string name="stats_condition_group">of people with your medical condition</string>
</resources>
