<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".WelcomeNewUser"
            android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WelcomeNewUser" android:background="@color/colorPrimary">
    <TextView
            android:text="@string/welcome_new_user_occupation"
            android:layout_width="345dp"
            android:layout_height="28dp"
            android:id="@+id/welcome_new_user_occupation_textview"
            android:fontFamily="@font/raleway_medium"
            android:textSize="18sp" android:textColor="@color/colorTextTV"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintVertical_bias="0.042"
            app:layout_constraintTop_toBottomOf="@+id/welcome_new_user_prompt_textview2"/>
    <TextView
            android:text="@string/welcome_new_user_prompt"
            android:layout_width="345dp"
            android:layout_height="28dp"
            android:id="@+id/welcome_new_user_prompt_textview2"
            android:fontFamily="@font/raleway_medium"
            android:textSize="18sp" android:textColor="@color/colorTextTV"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintTop_toBottomOf="@+id/welcome_new_greeting_textview"
            app:layout_constraintVertical_bias="0.015"/>
    <TextView
            android:text="@string/welcome_new_user_greeting"
            android:layout_width="293dp"
            android:layout_height="35dp"
            android:id="@+id/welcome_new_greeting_textview"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.254" app:layout_constraintVertical_bias="0.041"
            android:fontFamily="@font/raleway_semibold" android:textSize="24sp"
            android:textColor="@color/colorTextTV"/>
    <EditText
            android:layout_width="314dp"
            android:layout_height="41dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/welcome_new_user_occupation_edittext"
            app:layout_constraintTop_toBottomOf="@+id/welcome_new_user_occupation_textview"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.309"
            app:layout_constraintVertical_bias="0.026" android:fontFamily="@font/raleway_medium"
            android:hint="@string/welcome_new_user_occupation_hint" android:textColor="@color/colorTextET"/>
    <TextView
            android:text="@string/welcome_new_user_age"
            android:layout_width="345dp"
            android:layout_height="28dp"
            android:id="@+id/welcome_new_user_age_textview"
            android:fontFamily="@font/raleway_medium"
            android:textSize="18sp" android:textColor="@color/colorTextTV"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintVertical_bias="0.028"
            app:layout_constraintTop_toBottomOf="@+id/welcome_new_user_occupation_edittext"/>
    <EditText
            android:layout_width="314dp"
            android:layout_height="41dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/welcome_new_user_age_edittext"
            app:layout_constraintTop_toBottomOf="@+id/welcome_new_user_age_textview"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.309"
            app:layout_constraintVertical_bias="0.026" android:fontFamily="@font/raleway_medium"
            android:hint="@string/welcome_new_user_age" android:textColor="@color/colorTextET"/>
    <TextView
            android:text="@string/welcome_new_user_gender"
            android:layout_width="345dp"
            android:layout_height="28dp"
            android:id="@+id/welcome_new_user_gender_textview"
            android:fontFamily="@font/raleway_medium"
            android:textSize="18sp" android:textColor="@color/colorTextTV"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintVertical_bias="0.042"
            app:layout_constraintTop_toBottomOf="@+id/welcome_new_user_age_edittext"/>
    <EditText
            android:layout_width="314dp"
            android:layout_height="41dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/welcome_new_user_gender_edittext"
            app:layout_constraintTop_toBottomOf="@+id/welcome_new_user_gender_textview"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.309"
            app:layout_constraintVertical_bias="0.026" android:fontFamily="@font/raleway_medium"
            android:hint="@string/welcome_new_user_gender_hint" android:textColor="@color/colorTextET"/>
    <TextView
            android:text="@string/welcome_new_user_condition"
            android:layout_width="345dp"
            android:layout_height="28dp"
            android:id="@+id/welcome_new_user_condition_textview"
            android:fontFamily="@font/raleway_medium"
            android:textSize="18sp" android:textColor="@color/colorTextTV"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintVertical_bias="0.042"
            app:layout_constraintTop_toBottomOf="@+id/welcome_new_user_gender_edittext"/>
    <EditText
            android:layout_width="314dp"
            android:layout_height="41dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/welcome_new_user_condition_edittext"
            app:layout_constraintTop_toBottomOf="@+id/welcome_new_user_condition_textview"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.309"
            app:layout_constraintVertical_bias="0.026" android:fontFamily="@font/raleway_medium"
            android:hint="@string/welcome_new_user_condition_hint" android:textColor="@color/colorTextET"/>
    <Button
            android:text="@string/button_next"
            android:layout_width="297dp"
            android:layout_height="50dp"
            android:id="@+id/welcome_new_user_next_button"
            app:layout_constraintTop_toBottomOf="@+id/welcome_new_user_condition_edittext"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.263"
            app:layout_constraintVertical_bias="0.082" android:background="@color/colorAccent"
            android:textColor="@color/colorTextTV"
            android:fontFamily="@font/raleway_semibold" android:onClick="onNextButtonClick"/>
    <TextView
            android:text="@string/welcome_new_user_privacy"
            android:layout_width="320dp"
            android:layout_height="43dp"
            android:id="@+id/welcome_new_user_privacy_textview"
            app:layout_constraintTop_toBottomOf="@+id/welcome_new_user_next_button"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.329"
            app:layout_constraintVertical_bias="0.126" android:fontFamily="@font/raleway_medium"
            android:textColor="@color/colorTextTV"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>