<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StartingActivity" android:background="@color/colorPrimary">

    <TextView
            android:text="@string/starting_greeting"
            android:layout_width="230dp"
            android:layout_height="42dp"
            android:id="@+id/starting_greeting_textview" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.238"
            app:layout_constraintVertical_bias="0.125" android:fontFamily="@font/raleway_semibold"
            android:textSize="30sp" android:textColor="@color/colorTextTV"/>
    <TextView
            android:text="@string/starting_prompt"
            android:layout_width="225dp"
            android:layout_height="26dp"
            android:id="@+id/starting_prompt_textview"
            app:layout_constraintTop_toBottomOf="@+id/starting_greeting_textview"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.231"
            app:layout_constraintVertical_bias="0.051" android:fontFamily="@font/raleway_medium"
            android:textSize="18sp" android:textColor="@color/colorTextTV"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="38dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/starting_username_edittext"
            app:layout_constraintTop_toBottomOf="@+id/starting_prompt_textview"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.267"
            app:layout_constraintVertical_bias="0.062"
            android:fontFamily="@font/raleway_medium" android:hint="@string/starting_username"
            android:textColor="@color/colorTextET"/>
    <Button
            android:text="@string/button_next"
            android:layout_width="251dp"
            android:layout_height="52dp"
            android:id="@+id/starting_next_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/starting_username_edittext"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.268" app:layout_constraintVertical_bias="0.068"
            android:background="@color/colorAccent" android:textColor="@color/colorTextTV"
            android:fontFamily="@font/raleway_semibold" android:onClick="onNextButtonClick"/>
    <TextView
            android:text="@string/starting_getting_data"
            android:layout_width="236dp"
            android:layout_height="25dp"
            android:id="@+id/starting_getting_data_textview"
            app:layout_constraintTop_toBottomOf="@+id/starting_next_button"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.245"
            app:layout_constraintVertical_bias="0.075" android:fontFamily="@font/raleway_medium"
            android:textColor="@color/colorTextTV"/>
</androidx.constraintlayout.widget.ConstraintLayout>