<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EndTrip" android:background="@color/colorPrimary">

    <TextView
            android:text="@string/end_trip_score_hint"
            android:layout_width="255dp"
            android:layout_height="28dp"
            android:id="@+id/end_trip_score_hint_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.423"
            android:textColor="@color/colorTextTV" android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/end_trip_score_value_textView"
            app:layout_constraintVertical_bias="0.100" tools:text="@string/end_trip_score_hint"/>
    <TextView
            android:layout_width="241dp"
            android:layout_height="52dp"
            android:id="@+id/end_trip_score_value_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.388"
            android:textColor="@color/colorTextTV" android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/end_trip_score_textView"
            app:layout_constraintVertical_bias="0.072"/>
    <TextView
            android:layout_width="241dp"
            android:layout_height="52dp"
            android:id="@+id/end_trip_places_value_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.394"
            android:textColor="@color/colorTextTV" android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/end_trip_places_textView"
            app:layout_constraintVertical_bias="0.035"/>
    <TextView
            android:text="@string/end_trip_places_visited"
            android:layout_width="240dp"
            android:layout_height="30dp"
            android:id="@+id/end_trip_places_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.391"
            android:textColor="@color/colorTextTV" android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/end_trip_duration_value_textView"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.028"/>
    <TextView
            android:text="@string/end_trip_score"
            android:layout_width="255dp"
            android:layout_height="28dp"
            android:id="@+id/end_trip_score_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.429"
            android:textColor="@color/colorTextTV" android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/end_trip_number_value_textView"
            app:layout_constraintVertical_bias="0.055"/>
    <TextView
            android:layout_width="241dp"
            android:layout_height="52dp"
            android:id="@+id/end_trip_number_value_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.394"
            android:textColor="@color/colorTextTV" android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/end_trip_number_textView"
            app:layout_constraintVertical_bias="0.039"/>
    <TextView
            android:text="@string/end_trip_number"
            android:layout_width="255dp"
            android:layout_height="28dp"
            android:id="@+id/end_trip_number_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.429"
            android:textColor="@color/colorTextTV" android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/end_trip_places_value_textView"
            app:layout_constraintVertical_bias="0.038"/>
    <TextView
            android:layout_width="241dp"
            android:layout_height="52dp"
            android:id="@+id/end_trip_duration_value_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.391"
            android:textColor="@color/colorTextTV" android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/end_trip_duration_textView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.026"/>
    <TextView
            android:text="@string/end_trip_duration"
            android:layout_width="240dp"
            android:layout_height="30dp"
            android:id="@+id/end_trip_duration_textView"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.385"
            android:textColor="@color/colorTextTV" android:textSize="18sp" android:layout_marginBottom="512dp"
            app:layout_constraintTop_toBottomOf="@+id/end_trip_greeting_textview"
            app:layout_constraintVertical_bias="0.193"/>
    <TextView
            android:text="@string/end_trip_greeting"
            android:layout_width="277dp"
            android:layout_height="52dp"
            android:id="@+id/end_trip_greeting_textview"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.055" android:fontFamily="@font/raleway_semibold"
            android:textSize="30sp" android:textColor="@color/colorTextTV"
            app:layout_constraintHorizontal_bias="0.492"/>
    <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/end_trip_home_button"
            android:background="@drawable/ic_home_24px"
            app:layout_constraintTop_toBottomOf="@+id/end_trip_score_hint_textView"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.437" android:onClick="onHomeButtonClick"/>
</androidx.constraintlayout.widget.ConstraintLayout>
