<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StatsActivity" android:background="@color/colorPrimary">

    <TextView
            android:text="@string/stats_condition_group"
            android:layout_width="170dp"
            android:layout_height="53dp"
            android:id="@+id/stats_congrp_textView"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:textSize="18sp" android:textAlignment="textStart"
            android:fontFamily="@font/raleway_semibold" android:textColor="@color/colorTextTV"
            app:layout_constraintTop_toBottomOf="@+id/stats_occgrp_textView"
            app:layout_constraintVertical_bias="0.045"
            app:layout_constraintStart_toEndOf="@+id/stats_condition_textView"
            app:layout_constraintHorizontal_bias="0.357"/>
    <TextView
            android:layout_width="150dp"
            android:layout_height="53dp"
            android:id="@+id/stats_condition_textView"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="36sp" android:textAlignment="center"
            android:fontFamily="@font/raleway_semibold" android:textColor="@color/colorTextET"
            app:layout_constraintTop_toBottomOf="@+id/stats_occupation_textView"
            app:layout_constraintHorizontal_bias="0.187" app:layout_constraintVertical_bias="0.041"/>
    <TextView
            android:text="@string/stats_occupation_group"
            android:layout_width="170dp"
            android:layout_height="53dp"
            android:id="@+id/stats_occgrp_textView"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:textSize="18sp" android:textAlignment="textStart"
            android:fontFamily="@font/raleway_semibold" android:textColor="@color/colorTextTV"
            app:layout_constraintTop_toBottomOf="@+id/stats_gendergrp_textView"
            app:layout_constraintStart_toEndOf="@+id/stats_occupation_textView"
            app:layout_constraintHorizontal_bias="0.342" app:layout_constraintVertical_bias="0.044"/>
    <TextView
            android:layout_width="150dp"
            android:layout_height="53dp"
            android:id="@+id/stats_occupation_textView"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="36sp" android:textAlignment="center"
            android:fontFamily="@font/raleway_semibold" android:textColor="@color/colorTextET"
            app:layout_constraintTop_toBottomOf="@+id/stats_gender_textView"
            app:layout_constraintHorizontal_bias="0.187" app:layout_constraintVertical_bias="0.039"/>
    <TextView
            android:text="@string/stats_gender_group"
            android:layout_width="170dp"
            android:layout_height="53dp"
            android:id="@+id/stats_gendergrp_textView"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:textSize="18sp" android:textAlignment="textStart"
            android:fontFamily="@font/raleway_semibold" android:textColor="@color/colorTextTV"
            app:layout_constraintTop_toBottomOf="@+id/stats_agegrp_textView"
            app:layout_constraintStart_toEndOf="@+id/stats_gender_textView" app:layout_constraintHorizontal_bias="0.358"
            app:layout_constraintVertical_bias="0.064"/>
    <TextView
            android:layout_width="150dp"
            android:layout_height="53dp"
            android:id="@+id/stats_gender_textView"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="36sp" android:textAlignment="center"
            android:fontFamily="@font/raleway_semibold" android:textColor="@color/colorTextET"
            app:layout_constraintHorizontal_bias="0.183" app:layout_constraintTop_toBottomOf="@+id/stats_age_textView"
            app:layout_constraintVertical_bias="0.037"/>
    <TextView
            android:text="@string/stats_age_group"
            android:layout_width="169dp"
            android:layout_height="27dp"
            android:id="@+id/stats_agegrp_textView"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:textSize="18sp" android:textAlignment="textStart"
            android:fontFamily="@font/raleway_semibold" android:textColor="@color/colorTextTV"
            android:layout_marginBottom="64dp" app:layout_constraintTop_toBottomOf="@+id/stats_top_textView"
            app:layout_constraintVertical_bias="0.068" app:layout_constraintStart_toEndOf="@+id/stats_age_textView"
            app:layout_constraintHorizontal_bias="0.318"/>
    <TextView
            android:layout_width="150dp"
            android:layout_height="53dp"
            android:id="@+id/stats_age_textView"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="36sp" android:textAlignment="center"
            android:fontFamily="@font/raleway_semibold" android:textColor="@color/colorTextET"
            app:layout_constraintTop_toBottomOf="@+id/stats_top_textView" app:layout_constraintVertical_bias="0.034"
            app:layout_constraintHorizontal_bias="0.183"/>
    <TextView
            android:text="@string/stats_top"
            android:layout_width="314dp"
            android:layout_height="39dp"
            android:id="@+id/stats_top_textView"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp" android:textAlignment="center"
            android:fontFamily="@font/raleway_semibold" android:textColor="@color/colorTextTV"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintTop_toBottomOf="@+id/stats_score_textView" app:layout_constraintVertical_bias="0.023"/>
    <TextView
            android:layout_width="303dp"
            android:layout_height="71dp"
            android:id="@+id/stats_score_textView"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="44sp" android:textAlignment="center"
            android:fontFamily="@font/raleway_semibold" android:textColor="@color/colorTextET"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintTop_toBottomOf="@+id/stats_your_score_textView"
            app:layout_constraintVertical_bias="0"/>
    <TextView
            android:text="@string/stats_getting_data"
            android:layout_width="334dp"
            android:layout_height="21dp"
            android:id="@+id/stats_getting_data_textView" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.035"
            android:fontFamily="@font/raleway_medium" android:textColor="@color/colorTextTV"/>
    <TextView
            android:text="@string/stats_your_cum_score"
            android:layout_width="314dp"
            android:layout_height="39dp"
            android:id="@+id/stats_your_score_textView" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.036" android:textSize="24sp" android:textAlignment="center"
            android:fontFamily="@font/raleway_semibold" android:textColor="@color/colorTextTV"/>
    <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/stats_congrp_textView"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.53" android:background="@drawable/ic_home_24px"
            android:onClick="onHomeButtonClick"/>
</androidx.constraintlayout.widget.ConstraintLayout>
